unpackaged/main/default/objects/SF_Request__c/SF_Request__c.object-meta.xml
<CustomObject>
    <label>SF Request</label>
    <nameField>
        <displayFormat>SF_{0000}</displayFormat>
        <label>SF Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>