unpackaged/main/default/objects/SF_Request__c/fields/Anticipated_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Release_Date__c</fullName>
    <label>Anticipated Release Date</label>
    <type>Date</type>
</CustomField>