unpackaged/main/default/objects/SF_Request__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completed</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>