unpackaged/main/default/objects/SF_Request__c/fields/Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Due__c</fullName>
    <formula>Release_Date_Deadline__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>