unpackaged/main/default/objects/SF_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>