unpackaged/main/default/objects/SF_Request__c/fields/Execution_By__c.field-meta.xml
<CustomField>
    <fullName>Execution_By__c</fullName>
    <label>Execution By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Christine</fullName>
            </value>
            <value>
                <fullName>Jeff</fullName>
            </value>
            <value>
                <fullName>Chris</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Trello</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>