unpackaged/main/default/objects/SF_Request__c/fields/Fields_Requested__c.field-meta.xml
<CustomField>
    <fullName>Fields_Requested__c</fullName>
    <label>Fields Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>