unpackaged/main/default/objects/SF_Request__c/fields/Filters_Requested__c.field-meta.xml
<CustomField>
    <fullName>Filters_Requested__c</fullName>
    <label>Filters Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>