unpackaged/main/default/objects/SF_Request__c/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <label>Level of Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low: &lt;2 hours</fullName>
            </value>
            <value>
                <fullName>Medium: 2-5 hours</fullName>
            </value>
            <value>
                <fullName>High: 1 day</fullName>
            </value>
            <value>
                <fullName>Significant: Multi-Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>