unpackaged/main/default/objects/SF_Request__c/fields/Needs_Creation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Creation__c</fullName>
    <label>Needs Creation</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>