unpackaged/main/default/objects/SF_Request__c/fields/Needs_Testing__c.field-meta.xml
<CustomField>
    <fullName>Needs_Testing__c</fullName>
    <label>Needs Testing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>