unpackaged/main/default/objects/SF_Request__c/fields/Priority_Points__c.field-meta.xml
<CustomField>
    <fullName>Priority_Points__c</fullName>
    <formula>CASE( Priority__c , "Highest", 6, "High", 5,"Medium", 3,"Low", 1,0)
+
IF(ISBLANK( Release_Date_Deadline__c ),0, IF( Days_Until_Due__c &lt;2, 5, IF(Days_Until_Due__c &lt;8,4, IF(Days_Until_Due__c &lt;15, 3, IF(Days_Until_Due__c&gt;14, 1,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>