unpackaged/main/default/objects/SF_Request__c/fields/Purpose_of_Report__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Report__c</fullName>
    <label>Purpose of Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>