unpackaged/main/default/objects/SF_Request__c/fields/Release_Date_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_Deadline__c</fullName>
    <inlineHelpText>Must be released by this date</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>