unpackaged/main/default/objects/SF_Request__c/fields/Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Request_Source__c</fullName>
    <label>Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Institutional Relations</fullName>
            </value>
            <value>
                <fullName>General Maintenance</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>