unpackaged/main/default/objects/SF_Request__c/fields/Revised_Anticipated_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Anticipated_Release_Date__c</fullName>
    <label>Revised Anticipated Release Date</label>
    <type>Date</type>
</CustomField>