unpackaged/main/default/objects/SF_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functionality Request</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>Data Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>