unpackaged/main/default/objects/SF_Request__c/fields/User_Impact__c.field-meta.xml
<CustomField>
    <fullName>User_Impact__c</fullName>
    <label>User Impact</label>
    <type>TextArea</type>
</CustomField>