unpackaged/main/default/objects/SF_Request__c/listViews/Assigned_to_Chris.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Chris</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Level_of_Effort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Execution_By__c</field>
        <operation>equals</operation>
        <value>Chris</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Awaiting Additional Information</value>
    </filters>
    <label>Assigned to Chris - Open</label>
</ListView>