unpackaged/main/default/objects/SF_Request__c/listViews/Assigned_to_Denver.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Denver</fullName>
    <columns>NAME</columns>
    <columns>Execution_By__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Priority_Points__c</columns>
    <columns>Request_Source__c</columns>
    <columns>Release_Date_Deadline__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>Execution_By__c</field>
        <operation>equals</operation>
        <value>Denver</value>
    </filters>
    <label>Assigned To Denver - Open</label>
    <language>en_US</language>
</ListView>