unpackaged/main/default/objects/SF_Request__c/listViews/Awaiting_Info.listView-meta.xml
<ListView>
    <fullName>Awaiting_Info</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Source__c</columns>
    <columns>Description__c</columns>
    <columns>Release_Date_Deadline__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Execution_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Additional Information</value>
    </filters>
    <label>Awaiting Info</label>
</ListView>