unpackaged/main/default/objects/SF_Request__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Execution_By__c</columns>
    <columns>Request_Source__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
</ListView>