unpackaged/main/default/objects/SF_Request__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Execution_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress</label>
</ListView>