unpackaged/main/default/objects/SF_Request__c/listViews/Nicole_s_View.listView-meta.xml
<ListView>
    <fullName>Nicole_s_View</fullName>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Release_Date_Deadline__c</columns>
    <columns>NAME</columns>
    <columns>Execution_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned</value>
    </filters>
    <filters>
        <field>Request_Source__c</field>
        <operation>equals</operation>
        <value>Institutional Relations</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned</value>
    </filters>
    <label>Nicole's View</label>
    <language>en_US</language>
</ListView>