unpackaged/main/default/objects/SF_Request__c/listViews/Not_Migrated.listView-meta.xml
<ListView>
    <fullName>Not_Migrated</fullName>
    <columns>NAME</columns>
    <columns>Execution_By__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Source__c</columns>
    <columns>Release_Date_Deadline__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>Migrated__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Not Migrated</label>
    <language>en_US</language>
</ListView>