unpackaged/main/default/objects/SF_Request__c/listViews/Unassigned.listView-meta.xml
<ListView>
    <fullName>Unassigned</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Priority__c</columns>
    <columns>Priority_Points__c</columns>
    <columns>Request_Source__c</columns>
    <columns>Description__c</columns>
    <columns>Release_Date_Deadline__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Execution_By__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Unassigned</label>
</ListView>